--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ fastapi-versioning==0.10.0
 flake8==7.0.0
 frozenlist==1.4.1
 greenlet==3.0.3
+gunicorn==22.0.0
 h11==0.14.0
 hiredis==2.3.2
 httpcore==1.0.5
